projects/vb6parse/snapshots/tests/library/datetime/datevalue/datevalue_abbreviated_month.snap
---
source: projects/vb6parse/tests/library/datetime/datevalue.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: dt
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: DateValue
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\"Jan 15, 2025\""
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
