projects/vb6parse/snapshots/tests/library/datetime/datevalue/datevalue_in_msgbox.snap
---
source: projects/vb6parse/tests/library/datetime/datevalue.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: MsgBox
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: BinaryExpression
                  children:
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\"Parsed: \""
                    - kind: Whitespace
                      text: " "
                    - kind: Ampersand
                      text: "&"
                    - kind: Whitespace
                      text: " "
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: DateValue
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: userInput
                        - kind: RightParenthesis
                          text: )
        - kind: Newline
          text: "\n"
